# partition_with_cycle_detection

./: .gitignore
Implement/ICCAD_2021_C/: problem_data.md
Implement/Parallelized Technology Mapping to General PLBs by Adaptive Circuit Partitioning/: run.sh  run_yosys.sh  xmake.lua
Implement/Parallelized Technology Mapping to General PLBs by Adaptive Circuit Partitioning/data/: .input.v.swp  input.json  input.v
Implement/Parallelized Technology Mapping to General PLBs by Adaptive Circuit Partitioning/kahypar/: run_hmetis.txt  run_hmetis.txt.names  run_hmetis.txt.part3.epsilon0.03.seed-1.KaHyPar  run_hmetis.txt.vertices.txt
Implement/Parallelized Technology Mapping to General PLBs by Adaptive Circuit Partitioning/opt_pass/: muxpack.md  opt_clean.md  opt_demorgan.md  opt_dff.md  opt_expr.md  opt_ffinv.md  opt_hier.md
Implement/Parallelized Technology Mapping to General PLBs by Adaptive Circuit Partitioning/partitioned_verilog/: fifo_part0.v  fifo_part1.v  fifo_part2.v
Implement/Parallelized Technology Mapping to General PLBs by Adaptive Circuit Partitioning/src/: main.cc
Implement/Scaling FPGA Capacity via Temporal Reuse/: implement.md  implement.py
Implement/Scaling FPGA Capacity via Temporal Reuse/output/: output.txt
Implement/Scaling FPGA Capacity via Temporal Reuse/verilog2dag/dag/: CMakeLists.txt
Implement/Scaling FPGA Capacity via Temporal Reuse/verilog2dag/dag/src/: DAG.cpp  DAG.h  DAGBuilder.cpp  DAGBuilder.h  Json.cpp  Json.h  YosysModel.cpp  YosysModel.h  main.cpp
note/: ideas.md  research_in_partition.md
(+90 files in other folders)
